@@ -108,11 +108,8 @@ Please report bugs to
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
-<li><a href="glade-0.5.11.tar.gz">Glade 0.5.11 Tarball</a> (1.9 MB)<BR><BR>
-<li><a href="glade-0.5.10.tar.gz">Glade 0.5.10 Tarball</a> (1.9 MB)<BR><BR>
-<li><a href="glade-0.5.9.tar.gz">Glade 0.5.9 Tarball</a> (1.7 MB)<BR><BR>
-<li><a href="glade-0.5.8.tar.gz">Glade 0.5.8 Tarball</a> (1.7 MB)<BR><BR>
-<li><a href="glade-0.5.7.tar.gz">Glade 0.5.7 Tarball</a> (1.4 MB)<BR><BR>
+<li><a href="ftp://ftp.gnome.org/pub/GNOME/stable/sources/glade/glade-0.6.2.tar.gz">Glade 0.6.2 Tarball</a> (2.1 MB)<BR><BR>
+<li><a href="ftp://ftp.gnome.org/pub/GNOME/stable/sources/glade/glade-0.5.11.tar.gz">Glade 0.5.11 Tarball</a> (1.9 MB)<BR><BR>
 <p>
 Note: You will need <a href="links.html#automake">automake 1.4</a>
 and <a href="links.html#autoconf">autoconf 2.13</a> to build generated code.
